Ignored attribute Differences, Act/Exp attached.