@@ -6,7 +6,7 @@
 
     <groupId>io.github.raghav-chandra</groupId>
     <artifactId>json-matcher</artifactId>
-    <version>2.0.0</version>
+    <version>2.0.1</version>
     <packaging>jar</packaging>
 
     <name>json-matcher</name>
@@ -117,17 +117,6 @@
                 </executions>
             </plugin>
 
-          <!--  <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
-                <configuration>
-                    <argLine>-Xmx1024m -Xms1024m -XX:MaxPermSize=512m
-                        -Djdk.net.URLClassPath.disableClassPathURLCheck=true
-                    </argLine>
-                </configuration>
-            </plugin>-->
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
@@ -148,15 +137,6 @@
                 <artifactId>nexus-staging-maven-plugin</artifactId>
                 <version>1.6.7</version>
                 <extensions>true</extensions>
-                <!--<executions>
-                    <execution>
-                        <id>default-deploy</id>
-                        <phase>deploy</phase>
-                        <goals>
-                            <goal>deploy</goal>
-                        </goals>
-                    </execution>
-                </executions>-->
                 <configuration>
                     <serverId>ossrh</serverId>
                     <nexusUrl>https://oss.sonatype.org/</nexusUrl>
@@ -164,15 +144,6 @@
                     <!--<skipStaging>true</skipStaging>-->
                 </configuration>
             </plugin>
-
-           <!-- <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <version>2.8.1</version>
-                <configuration>
-                    <skip>true</skip>
-                </configuration>
-            </plugin>-->
         </plugins>
     </build>
 
